@@ -1,3 +1,4 @@
+1/5/12 disable "Remove Solute" button when there is no solute in the beaker
 1/5/12 change drag bounds for shaker, OK if top part of shaker goes off top edge of play area
 # 0.00.01 (59868) Jan 4, 2012
 1/4/12 early dev version for discussion of design issues with JC
